@@ -1,3 +1,9 @@
+2003-02-14  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
+
+	* src/interface.[c,h]:
+	* src/callbacks.c: Disable Copy button by default. Also
+	update sensitivity of copy button accordingly.
+ 
 2003-01-24  Glynn Foster  <glynn.foster@sun.com>
 
 	* help/C/gnome-character-map-C.omf:
